@@ -518,7 +518,7 @@ static apr_status_t socache_shmcb_retrieve(ap_socache_instance_t *ctx,
     ap_log_error(APLOG_MARK, APLOG_DEBUG, 0, s,
                  "leaving socache_shmcb_retrieve successfully");
 
-    return rv == 0 ? APR_SUCCESS : APR_EGENERAL;
+    return rv == 0 ? APR_SUCCESS : APR_NOTFOUND;
 }
 
 static apr_status_t socache_shmcb_remove(ap_socache_instance_t *ctx, 
