@@ -2,6 +2,8 @@
 
 Changes with Apache 2.3.7
 
+  *) socache modules: return APR_NOTFOUND when a lookup is not found [Nick Kew]
+
   *) mod_authn_cache: new module [Nick Kew]
 
   *) core: Try to proceed with authorization even if authentication failed.
